# chambapro-ffmpeg-api

./: .env.example  .gitignore  AGENT.md  Cargo.toml  DOCKERHUB.md  Dockerfile  LICENSE  README.es.md  README.md  sdd-init.json
.github/workflows/: docker-image.yml
openspec/changes/oga_to_mp3_api/: design.md  spec.md  tasks.md
src/: dashboard.rs  main.rs  models.rs  routes.rs  telemetry.rs  worker.rs
templates/: dashboard.html
tests/: cucumber_tests.rs
tests/features/: conversion.feature
