[package]
name = "chambapro-ffmpeg-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
bytes = "1.5"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
dotenvy = "0.15"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
utoipa = { version = "4.2" }
utoipa-swagger-ui = { version = "7.0", features = ["axum", "reqwest"] }
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = { version = "0.22" }

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }

[[test]]
name = "cucumber_tests"
harness = false

